--- a/.github/workflows/keep_green.yml
+++ b/.github/workflows/keep_green.yml
@@ -22,7 +22,10 @@ jobs:
           echo "Updated at $(date)" > update.md
 
       - name: Commit and push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add update.md
-          git commit -m "Daily update: $(date '+%Y-%m-%d')" || echo "Auto commit"
-          git push
+          git commit -m "Daily update: $(date '+%Y-%m-%d %H:%M:%S')" || echo "No changes to commit"
+          git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
+
