--- a/.github/workflows/keep_green.yml
+++ b/.github/workflows/keep_green.yml
@@ -1,1 +1,24 @@
+name: keep_green
 
+on:
+  push:
+    branches:
+      - main
+  schedule:
+    - cron: "*10 8 * * *"
+
+jobs:
+  autogreen:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Clone repository
+        uses: actions/checkout@v3
+
+      - name: auto_green
+        run: |
+          git config --local user.email "itzruimu@outlook.com"
+          git config --local user.name "ItzReimu"
+          git remote set-url origin https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}
+          git pull --rebase
+          git commit --allow-empty -m "keep green"
+          git push
