--- a/.github/workflows/keep_green.yml
+++ b/.github/workflows/keep_green.yml
@@ -27,5 +27,5 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           git add update.md
-          git commit -m "Daily update: $(date '+%Y-%m-%d %H:%M:%S')" || echo "KeepGreen"
+          git commit -m "Autocommit: $(date '+%Y-%m-%d %H:%M:%S')" || echo "KeepGreen"
           git push https://x-access-token:${GITHUB_TOKEN}@github.com/${{ github.repository }}.git HEAD:main
